--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,12 +1,48 @@
 {% set user = app.session.get('user') %}
-<div id="centered">
-    <div class="navigation">
-        <a href="/"> <div class="menu">Главная </div> </a>
-        {% if user is defined and user is not null %}
-            <a href="{{ path('logout') }}" class="logout"><div class="menu">Выход</div></a>
-            <h3 style="margin: 10px 0; color:white;">{{ user.full_name }}</h3>
-        {% else %}
-            <a href="{{ path('login') }}"> <div class="menu">Авторизация </div> </a>
-        {% endif %}
+<header class="header">
+    <div class="header-2">
+        <div class="flex">
+            <a href="/" class="logo">Электронный читальный зал</a>
+
+            <nav class="navbar">
+                <div class="search-form">
+                    <form action="{{ path('search') }}" method="GET" class="search-form">
+                        <div class="input-group">
+                            <input type="text" name="q" class="form-control"
+                                   placeholder="Поиск по названию, автору или издательству">
+                            <div class="input-group-append">
+                                <button class="btn search-btn" type="submit">
+                                    <i class="fa fa-search"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </nav>
+
+            <div class="icons">
+                <div id="menu-btn" class="fa fa-bars"></div>
+                <div id="user-btn" class="fa fa-user"></div>
+                {% if user is defined and user is not null %}
+                    <a href="{{ path('book_favorites') }}" id="star-btn" class="fa fa-star"
+                           title="Избранные книги"></a>
+                {% endif %}
+            </div>
+
+            {% if user is defined and user is not null %}
+                <div class="user-box">
+                    <p>Логин : <span>{{ user.full_name }}</span></p>
+                    <p>email : <span>{{ user.email }}</span></p>
+                    <a href="{{ path('logout') }}" class="logout delete-btn-custom">Выйти</a>
+                </div>
+
+            {% else %}
+                <div class="user-box">
+                    <p><a href={{ path('login') }}><span>Авторизация</span></a>
+                        | <a href={{ path('register') }}><span>Регистрация</span></a>
+                    </p>
+                </div>
+            {% endif %}
+        </div>
     </div>
-</div>
+</header>
