--- a/templates/auth/register.html.twig
+++ b/templates/auth/register.html.twig
@@ -4,28 +4,66 @@
 
 {% block body %}
 
-    <form>
-        <label>ФИО</label>
-        <input type="text" name="full_name" placeholder="Введите свое полное имя">
-        <label>Логин</label>
-        <input type="text" name="login" placeholder="Введите свой логин">
-        <label>Почта</label>
-        <input type="email" name="email" placeholder="Введите адрес своей почты">
-        <label>Пароль</label>
-        <input type="password" name="password" placeholder="Введите пароль">
-        <label>Подтверждение пароля</label>
-        <input type="password" name="password_confirm" placeholder="Подтвердите пароль">
-        <button type="submit" class="register-btn">Зарегистрироваться</button>
-        <p>
-            У вас уже есть аккаунт? - <a href="{{ path('login') }}">авторизируйтесь</a>!
-        </p>
+    <div class="form-container">
+        <form action="" method="post">
+            <h3>Регистрация</h3>
 
-        <p class="msg none"></p>
-    </form>
+            <div class="form-group row">
+                <label for="full_name" class="col-2 col-form-label box">ФИО</label>
+                <div class="col-10">
+                    <input type="text" name="full_name" placeholder="Введите свое полное имя" required
+                           class="form-control box">
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="login" class="col-2 col-form-label box">Логин</label>
+                <div class="col-10">
+                    <input type="text" name="login" placeholder="Введите свой логин" required
+                           class="form-control box">
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="email" class="col-2 col-form-label box">Почта</label>
+                <div class="col-10">
+                    <input type="email" name="email" placeholder="Введите адрес электронной почты" required
+                           class="form-control box">
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="password" class="col-2 col-form-label box">Пароль</label>
+                <div class="col-10">
+                    <input type="password" name="password" placeholder="Введите пароль" required
+                           class="form-control box">
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="password_confirm" class="col-2 col-form-label box">Пароль</label>
+                <div class="col-10">
+                    <input type="password" name="password_confirm" placeholder="Подтвердите пароль" required
+                           class="form-control box">
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <div class="g-recaptcha" data-sitekey="6LfiU8klAAAAAAF1JKHwaMkToct_e0yS0LiBg1KK"></div>
+            </div>
+
+            <input type="submit" name="submit" value="Зарегистрироваться" class="btn-custom register-btn">
+            <p>
+                У вас уже есть аккаунт? - <a href="{{ path('login') }}">авторизируйтесь</a>!
+            </p>
+            <p class="msg none"></p>
+        </form>
+    </div>
 
 {% endblock %}
 
 {% block javascripts %}
+    <script src="{{ ('https://www.google.com/recaptcha/api.js?hl=ru') }}" async defer></script>
     <script src="{{ asset('js/jquery-3.3.1.min.js') }}"></script>
-    <script src="{{  asset('js/auth.js') }}"></script>
+    <script src="{{ asset('js/auth.js') }}"></script>
 {% endblock %}
