--- a/templates/author/edit.html.twig
+++ b/templates/author/edit.html.twig
@@ -1,20 +1,36 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    <div class="container">
+
+    <section class="checkout">
         {% if error_message is defined and error_message is not null %}
-            <span class="text-danger">{{ error_message|escape }}</span>
+            <p class="empty">{{ error_message|escape }}</p>
+            <h4 align="left">
+                <a href="{{ path('admin_index') }}">&#8678; Вернуться в список для редактирования</a>
+            </h4>
         {% endif %}
+
         {% if author is defined and author is not null %}
-            <form method = "POST" action= "{{ path('author_edit_post', {'authorId': author.idAuthor}) }}" class="frm">
-                <div class="group">
-                    <label for="name"> ФИО Автора: </label>
-                    <br><br>
-                    <input type="text" name="name_author" value="{{ author.nameAuthor|escape }}" placeholder=""/>
-                    <span class="highlight"></span><span class="bar"></span>
+            <form method="POST" action="{{ path('author_edit_post', {'authorId': author.idAuthor}) }}" class="frm">
+                <h3>Редактируем автора "{{ author.nameAuthor }}".</h3>
+                <div class="flex">
+                    <div class="inputBox">
+                        <span> ФИО Автора:</span>
+                        <input type="text" name="name_author" value="{{ author.nameAuthor|escape }}" placeholder=""/>
+                        <p>
+                            <a href="{{ path('author_delete', {'authorId': author.idAuthor}) }}"
+                               class="delete-btn-custom">Удалить автора</a>
+                        </p>
+                    </div>
+                    <div class="inputBox">
+                        <span> Сохранить изменения:</span>
+                        <input type="submit" id="add_author" name="add_author" value="Редактировать"
+                               class="btn-custom">
+                    </div>
                 </div>
-                <input type="submit" id="add_author" name="add_author" value="Редактировать" class="button buttonBlue">
+                <h4 align="end">
+                    <a href="{{ path('admin_index') }}">Вернуться в список для редактирования &#8680;</a>
+                </h4>
             </form>
-            <a href="{{ path('author_delete', {'authorId': author.idAuthor}) }}" class="button buttonBluedel">Удалить автора</a>
         {% endif %}
-    </div>
+    </section>
 {% endblock %}
