--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,20 +2,21 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <title>{% block title %}Электронная библиотека{% endblock %}</title>
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}?v=2" />
         <link rel="stylesheet" href="{{ asset('css/font-awesome.css') }}">
         <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
-        {% block stylesheets %} <link rel="stylesheet" href="{{ asset('css/style.css') }}"> {% endblock %}
+        <link rel="stylesheet" href="{{ asset('css/new_style.css') }}">
     </head>
     <body>
-        <header>
-            {% include 'header.html.twig' %}
-        </header>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-        <footer>
-            {% include 'footer.html.twig' %}
-        </footer>
+    {% include 'header.html.twig' %}
+    <br>
+    {% block body %}{% endblock %}
+    {% block javascripts %}
+        <script src="{{ asset('js/header_script.js') }}"></script>
+    {% endblock %}
+    {% include 'footer.html.twig' %}
     </body>
 </html>
