--- a/templates/book/favoritesbooks.html.twig
+++ b/templates/book/favoritesbooks.html.twig
@@ -1,31 +1,17 @@
-{% extends 'base.html.twig' %}
+    {% extends 'base.html.twig' %}
 {% block body %}
-    <div id="leftCol">
-        {{ render('/menu/categories') }}
-    </div>
     {% if message is defined and message is not null %}
-        <span>{{ message|escape }}</span>
+        <p class="empty">{{ message|escape }}</p>
     {% endif %}
-    {% if favorite_books is defined and favorite_books is not null and favorite_books is not empty %}
-        <article>
-            {% include 'book/list.html.twig' with {'books': books, 'user': user, 'favoriteBooks': favorite_books} %}
+    {% if favoriteBooks is defined and favoriteBooks is not null and favoriteBooks is not empty %}
+        <article class="products">
+            <h1 class="title">Избранная литература</h1>
+            <div class="box-container">
+                {% include 'book/list.html.twig' with {'books': books, 'user': user, 'favoriteBooks': favoriteBooks} %}
+            </div>
             {% if pagination is not null %}
                 {{ pagination|raw }}
             {% endif %}
         </article>
-        <br />
     {% endif %}
 {% endblock %}
-
-{% block javascripts %}
-    <script src="{{ asset('js/favoritebookscontroller.js') }}"></script>
-    <script>
-        {% if user is defined and user is not null %}
-        document.addEventListener('DOMContentLoaded', () => {
-            const fbc = new FavoriteBooksController('{{ user.id_users }}');
-        });
-        {% endif %}
-    </script>
-
-{% endblock %}
-
