--- a/templates/publishing_house/edit.html.twig
+++ b/templates/publishing_house/edit.html.twig
@@ -1,20 +1,38 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    <div class="container">
+    <section class="checkout">
         {% if error_message is defined and error_message is not null %}
-            <span class="text-danger">{{ error_message|escape }}</span>
+            <p class="empty">{{ error_message|escape }}</p>
+            <h4 align="left">
+                <a href="{{ path('admin_index') }}">&#8678; Вернуться в список для редактирования</a>
+            </h4>
         {% endif %}
+
         {% if publishing_house is defined and publishing_house is not null %}
-            <form method = "POST" action= "{{ path('publishing_house_edit_post', {'publishingHouseId': publishing_house.idPublishingHouse}) }}" class="frm">
-                <div class="group">
-                    <label for="name"> Название издательского дома: </label>
-                    <br><br>
-                    <input type="text" name="name_publishing_house" value="{{ publishing_house.namePublishingHouse|escape }}" placeholder=""/>
-                    <span class="highlight"></span><span class="bar"></span>
+            <form method="POST"
+                  action="{{ path('publishing_house_edit_post', {'publishingHouseId': publishing_house.idPublishingHouse}) }}"
+                  class="frm">
+                <h3>Редактируем издательский дом "{{ publishing_house.namePublishingHouse }}".</h3>
+                <div class="flex">
+                    <div class="inputBox">
+                        <span> Название издательского дома::</span>
+                        <input type="text" name="name_publishing_house"
+                               value="{{ publishing_house.namePublishingHouse|escape }}" placeholder=""/>
+                        <p>
+                            <a href="{{ path('publishing_house_delete', {'publishingHouseId': publishing_house.idPublishingHouse}) }}"
+                               class="delete-btn-custom">Удалить издательский дом</a>
+                        </p>
+                    </div>
+                    <div class="inputBox">
+                        <span> Сохранить изменения:</span>
+                        <input type="submit" id="add_publishing_house" name="add_publishing_house" value="Редактировать"
+                               class="btn-custom">
+                    </div>
                 </div>
-                <input type="submit" id="add_publishing_house" name="add_publishing_house" value="Редактировать" class="button buttonBlue">
+                <h4 align="end">
+                    <a href="{{ path('admin_index') }}">Вернуться в список для редактирования &#8680;</a>
+                </h4>
             </form>
-            <a href="{{ path('publishing_house_delete', {'publishingHouseId': publishing_house.idPublishingHouse}) }}" class="button buttonBluedel">Удалить автора</a>
         {% endif %}
-    </div>
+    </section>
 {% endblock %}
