--- a/templates/reader/base_reader.html.twig
+++ b/templates/reader/base_reader.html.twig
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <title>{% block title %}Электронная библиотека{% endblock %}</title>
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}?v=2"/>
-    <link rel="stylesheet" href="{{ asset('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/font-awesome.css') }}">
     <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/reader.css') }}">
     <link rel="stylesheet" href="{{ asset('css/new_style.css') }}">
 </head>
 <body>
+{% include 'header.html.twig' %}
+<br>
 {% block body %}{% endblock %}
-{% block javascripts %}{% endblock %}
+{% block javascripts %}
+    <script src="{{ asset('js/header_script.js') }}"></script>
+{% endblock %}
+{% include 'footer.html.twig' %}
 </body>
 </html>
