--- a/templates/reader/djvu.reader.html.twig
+++ b/templates/reader/djvu.reader.html.twig
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 
     <link rel="stylesheet" href="{{ asset('css/reader.css') }}">
     <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
